--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 <h1>Bienvenue sur notre site collaboratif</h1>
+
 </body>
+<footer>
+  <p>© 2024 Mon Site Collaboratif</p>
+</footer>
+
+
 </html>
